chore: change documentation link

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <h1>Digital Twins Event Gateway</h1>
-<a href="./kdoc">Check out latest project documentation</a>
-<a href="./asyncapi">Check out the events API </a>
+<a href="./documentation/code-doc">Check out latest code documentation</a>
+<a href="./documentation/asyncapi-doc">Check out the events API </a>
 </body>
 </html>
