--- a/index.html
+++ b/index.html
@@ -1,15 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DT Event Gateway</title>
-</head>
-<body>
-<h1>Digital Twins Event Gateway</h1>
-<a href="./documentation/code-doc">Check out latest code documentation</a>
-<a href="./documentation/asyncapi-doc">Check out the events API </a>
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <div class="container-fluid p-0">
+      <div
+        class="jumbotron bg-light text-dark jumbotron-fluid text-center p-3 m-0"
+        id="div-title"
+      >
+        <h1>Digital Twins Event Gateway</h1>
+      </div>
+      <div class="card mx-auto my-3" style="width: 40%">
+        <div class="card-body">
+          <p>
+            The <strong>Event Gateway</strong> between <i>Digital Twins</i> and
+            <i>Microservices</i>.
+          </p>
+          <p>
+            It's responsible to consume events from
+            <i>Azure Digital Twins</i> through <i>Azure SignalR</i> service and
+            to propagate them to application microservices through the
+            <i>Kafka Event Broker</i>.
+          </p>
+          <p>
+            In order to view the schemas of events published by the gateway,
+            check out the
+            <a href="./documentation/asyncapi-doc"> AsyncAPI </a> page.
+          </p>
+          <p>
+            To see the code documentation, check out the
+            <a href="./documentation/code-doc"> KDoc </a> page.
+          </p>
+          <img
+            src="https://raw.githubusercontent.com/SmartOperatingBlock/documentation/main/imgs/dt-event-gateway-schema.svg"
+            style="max-width: 100%; max-height: 300px"
+            alt="DT Event Gateway"
+          />
+          <br />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
